python/testData/highlighting/malformedStringEscaped.py
# missing last quote, escaped
a = 1 # make below not a doc comment
<error descr="Missing closing quote [']">'abc\'</error>
